Survey Monkey/force-app/main/default/objects/User_Answer__c/User_Answer__c.object-meta.xml
<CustomObject>
    <label>User Answer</label>
    <nameField>
        <label>User Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>