Survey Monkey/force-app/main/default/objects/User_Answer__c/fields/AnswerName__c.field-meta.xml
<CustomField>
    <fullName>AnswerName__c</fullName>
    <label>AnswerName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>