Survey Monkey/force-app/main/default/objects/User_Answer__c/fields/Checked__c.field-meta.xml
<CustomField>
    <fullName>Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked</label>
    <type>Checkbox</type>
</CustomField>