Survey Monkey/force-app/main/default/objects/User_Answer__c/fields/QuestionName__c.field-meta.xml
<CustomField>
    <fullName>QuestionName__c</fullName>
    <label>QuestionName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>