Survey Monkey/force-app/main/default/objects/User_Answer__c/fields/QuestionPosition__c.field-meta.xml
<CustomField>
    <fullName>QuestionPosition__c</fullName>
    <label>QuestionPosition</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>