Survey Monkey/force-app/main/default/objects/User_Answer__c/fields/User_Survey__c.field-meta.xml
<CustomField>
    <fullName>User_Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User Survey</label>
    <referenceTo>User_Survey__c</referenceTo>
    <relationshipLabel>User Answers</relationshipLabel>
    <relationshipName>User_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>